terminando a sidebar e o footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Meu Spotify</title>
   </head>
   <body>
-    <header class="sidebar">
+    <sidebar class="sidebar">
         <nav class="sidebar_navigation">
             <section class="logo_section">
                 <a href="/">
@@ -40,7 +40,41 @@
                 </ul>
             </section>
         </nav>
-    </header>
+        <section class="library">
+            <div class="library_content">
+                <button class="library_button">
+                    <span class="faa fa fas fa-book"></span>
+                    <span>Sua biblioteca</span>
+                </button>
+                <span class="fa fa-plus"></span>
+            </div>
+            <section class="section_playlist">
+                <div class="section_playlist_content">
+                    <span class="text title">Crie sua primeira playlist</span>
+                    <span class="text subtitle">É fácil, vamos te ajudar.</span>
+                    <button class="section_playlist_button">
+                        <span>Criar playlist</span>
+                    </button>
+                </div>
+            </section>
+            <section class="cookies">
+                <a href="/">Cookies</a>
+            </section>
+            <section class="languages">
+                <button class="languages_button">
+                    <span class="fa fa-globe"></span>
+                    <span>Português do Brasil</span>
+                </button>
+            </section>
+        </section>
+    </sidebar>
+    <footer class="footer">
+        <section class="propaganda">
+            <h5>TESTAR O PREMIUM DE GRAÇA</h5>
+            <p class="subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito</p>
+        </section>
+        <button class="inscrever">Inscreva-se grátis</button>
+    </footer>
 
     <script src="src/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js" integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
