--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="shortcut icon" href="src/assets/icons/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/vars.css">
+    <link rel="stylesheet" href="src/css/main-content.css">
     <link rel="stylesheet" href="src/css/style.css" />
     <title>Meu Spotify</title>
   </head>
@@ -68,9 +70,40 @@
             </section>
         </section>
     </sidebar>
+    <main>
+        <section class="main_container">
+            <header class="header_navigation">
+                <section class="navigation">
+                    <button class="arrow-left">
+                        <img src="src/assets/icons/small-left.png" alt="Seta pequena para esquerda da cor cinza">
+                    </button>
+                    <button class="arrow-right">
+                        <img src="src/assets/icons/small-right.png" alt="Seta pequena para direita da cor cinza">
+                    </button>
+                </section>
+
+                    <div class="header_search">
+                        <img src="src/assets/icons/search.png" alt="">
+                        <input type="text" name="" id="search-input" maxlength="800" placeholder="O que você quer ouvir?">
+                    </div>
+
+                    <div class="header_login">
+                        <button class="subscribe">Inscreva-se</button>
+                        <button class="login">Entrar</button>
+                    </div>
+            </header>
+            <section class="navegation_sections">
+                <h1 class="title">Boa tarde</h1>
+                <p class="subtitle">Navegar por todas as seções</p>
+                <div class="container_navegation_sections">
+    
+                </div>
+            </section>
+        </section>
+    </main>
     <footer class="footer">
         <section class="propaganda">
-            <h5>TESTAR O PREMIUM DE GRAÇA</h5>
+            <h5 class="title">TESTAR O PREMIUM DE GRAÇA</h5>
             <p class="subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito</p>
         </section>
         <button class="inscrever">Inscreva-se grátis</button>
